clean env variables